# data_mining_flight

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
data/processed/: fareBasis_airline_mapping.csv
data/truncated/: flightDate_daily_counts.csv  searchDate_daily_counts.csv
data_mining_flight/: data_fetching.py  truncate_data.py
notebooks/: eda_flight_prices.ipynb  main.ipynb
