[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_mining_flight"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "ROC Stars" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.6"


[tool.ruff]
line-length = 99
src = ["data_mining_flight"]
include = ["pyproject.toml", "data_mining_flight/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["data_mining_flight"]
force-sort-within-sections = true

